--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -187,6 +187,11 @@
     </servlet>
 
     <servlet>
+        <servlet-name>sms_otp_bc</servlet-name>
+        <jsp-file>/mcx-user-registration/sms_otp_bc.jsp</jsp-file>
+    </servlet>
+
+    <servlet>
         <servlet-name>oauth2_error.do</servlet-name>
         <jsp-file>/oauth2_error.jsp</jsp-file>
     </servlet>
@@ -319,6 +324,11 @@
     <servlet-mapping>
         <servlet-name>sms_auth_bc</servlet-name>
         <url-pattern>/si/sms/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>sms_otp_bc</servlet-name>
+        <url-pattern>/si/smsotp.do</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
