--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
         <module>components/openid-extension</module>
         <module>components/token-introspection</module>
         <module>components/sample-request</module>
+        <module>components/customjwt</module>
         <module>features</module>
     </modules>
 
@@ -899,7 +900,7 @@
             <dependency>
                 <groupId>com.wso2telco.core</groupId>
                 <artifactId>config-util</artifactId>
-                <version>2.4.4</version>
+                <version>2.4.5-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.wso2telco.core</groupId>
